--- a/.github/workflows/syncUpstream.yml
+++ b/.github/workflows/syncUpstream.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron:  '0 7 * * 1,4'
+    - cron:  '0 7 * * sun-sat'
     # scheduled at 07:00 every Monday and Thursday
   workflow_dispatch:
 
