--- a/.github/workflows/syncUpstream.yml
+++ b/.github/workflows/syncUpstream.yml
@@ -22,6 +22,7 @@ jobs:
         upstream_repository: pojiezhiyuanjun/freev2
         upstream_branch: master
         target_branch: master
+        git_pull_args: --allow-unrelated-histories
 
     - name: Timestamp
       run: date
