--- a/.github/workflows/syncUpstream.yml
+++ b/.github/workflows/syncUpstream.yml
@@ -1,7 +1,7 @@
 on:
   schedule:
-    - cron:  '0 7 * * sun-sat'
-    # scheduled at 07:00 every Monday and Thursday
+    - cron:  '0 14 * * sun-sat'
+    # scheduled at 14:00 UTC (22:00 local) every days
   workflow_dispatch:
 
 jobs:
